[gd_scene load_steps=7 format=2]

[ext_resource path="res://Join Server Buttom.png" type="Texture" id=1]
[ext_resource path="res://Quit to main menu buttom.png" type="Texture" id=2]
[ext_resource path="res://Create server buttom.png" type="Texture" id=3]
[ext_resource path="res://AGENCYB.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Network_setup.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="Network_setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="Multiplayer_configure"]
margin_left = 3.00339
margin_top = -1.66858
margin_right = 400.003
margin_bottom = 600.331
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create Server Buttom" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -107.666
margin_top = 59.2103
margin_right = 104.334
margin_bottom = 215.21
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join server buttom" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.004
margin_top = -80.1098
margin_right = 103.996
margin_bottom = 75.8902
icon = ExtResource( 1 )

[node name="Button" type="Button" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -108.266
margin_top = -218.144
margin_right = 103.734
margin_bottom = -62.1442
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server_ip_address" type="LineEdit" parent="Multiplayer_configure"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -159.505
margin_top = 16.0
margin_right = 163.495
margin_bottom = 46.0
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Enter IP address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Device_ip_address" type="Label" parent="CanvasLayer"]
margin_left = 4.0
margin_top = 560.0
margin_right = 399.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Multiplayer_configure/Create Server Buttom" to="." method="_on_Create_Server_Buttom_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Join server buttom" to="." method="_on_Join_server_buttom_pressed"]
[connection signal="pressed" from="Multiplayer_configure/Button" to="." method="_on_Button_pressed"]
